# oarepo-oai-pmh-harvester

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  babel.ini  build-models.sh  format.sh  generate_translations.sh  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: build.yaml  codeql.yml  main.yml  manual.yaml  push.yaml
docs/source/: conf.py  databases.rst  index.rst  installation_.rst  quickstart.rst
example/: cli.py  error_handlers.py  mapping.py  parser.py  post_processors.py  pre_processors.py
example/rules/: utils.py
invenio_oarepo_oai_pmh_harvester/: __init__.py  cli.py  exceptions.py  json.py  migration.py  models.py  oai_base.py  register.py  rules_.py  s_parser.py  spagetti.py  stats.py  synchronization.py  transformer.py  utils.py  version.py
invenio_oarepo_oai_pmh_harvester/alembic/: 0daaf698ec07_remove_oai_identifier_from_oai_record_.py  2282a9625084_added_oaistatrules_table.py  24445d202733_removed_entrypoint_from_oairule_and_.py  58b215455f1e_initial_models.py  5ffdbb78795e_updated_oaimapper_tab.py  795da8efcb34_create_oai_client_branch.py  8f2b0c2109b1_added_oaistats_table.py  9968e56e476f_create_invenio_oarepo_oai_pmh_harvester.py  9a53e55796fa_added_traceback_column_to_oairecord_.py  9c0ec46a1283_add_constant_field_to_oaiprovider.py  a0ccc82bae06_added_oaimapper_table.py  e1c97dd21f28_add_oai_identifier_without_unique_.py  f0dff0a4dfbf_add_nusl_id_to_oairecord_class_table.py
models/: datacite_4.5.yaml  datacite_datatypes_4.5.yaml  oaipmh_batch.yaml  oaipmh_harvester.yaml  oaipmh_record.yaml  oaipmh_run.yaml
oaipmh_batch/: config.py  ext.py  proxies.py  views.py
oaipmh_batch/records/: api.py  models.py
oaipmh_batch/resources/: config.py
oaipmh_batch/services/: config.py  schema.py  search.py  service.py
oaipmh_config/: config.py  ext.py
oaipmh_config/records/: api.py  dumper.py  models.py
oaipmh_config/resources/: config.py  resource.py
oaipmh_config/services/: config.py  search.py  service.py
oaipmh_record/: config.py  ext.py  views.py
oaipmh_record/records/: api.py  dumper.py
oaipmh_record/resources/: resource.py
oaipmh_record/services/: config.py  permissions.py  schema.py  service.py
oaipmh_run/: config.py  ext.py
oaipmh_run/records/: api.py  dumper.py  models.py
oaipmh_run/resources/: resource.py
oaipmh_run/services/: config.py
oarepo_oai_pmh_harvester/: __init__.py  cli.py  decorators.py  ext.py  migration.py  models.py  oai_base.py  provider.py  proxies.py  register.py  synchronization.py  transformer.py  utils.py  version.py  views.py
oarepo_oai_pmh_harvester/alembic/: 103dd442b7ea_added_unhandled_paths.py  10c95d1d9958_changed_unhandled_paths_data_type.py  130a8df86799_change_logs_datatype_into_text_in_.py  182e0f31cabc_more_oai_identifiers.py  4e6ff84e2082_changed_unhandled_paths_data_type.py  51c5f7c2ec13_added_default_endpoint_field.py  5e003513e795_changed_logs_to_text_datatype.py  6808372c3406_added_traceback_table.py  6e26bad1f028_added_endpoint_mapping.py  795da8efcb34_create_oai_client_branch.py  93118e4ff5b6_changed_unhandled_paths_data_type.py  9438b43e3f51_remove_foreigkey_to_oairecord_table.py  9e75e6f14f9d_added_set_to_provider_table.py  aff75d58d918_init_oai_models.py  c36fe8609f29_added_oaisynchronizers_table.py  ddf8cd5988d6_delete_logs.py  e6e68975d321_added_unhandled_paths.py  efc291af2039_2021_01_14_oai_identifer_in_oai_record_.py  f24afbdebf85_renamed_nusl_id_to_pid.py  fc0d04aeda93_added_synchronizer_code.py  fe318bb9ed64_2021_01_14_added_purpose_field_to_.py
oarepo_oaipmh_harvester/: __init__.py  cli.py  components.py  config.py  ext.py  harvester.py  loaders.py  models.py  parsers.py  permissions.py  proxies.py  reader_callback.py  tasks.py  transformer.py  uow.py  utils.py
oarepo_oaipmh_harvester/administration/: base.py
oarepo_oaipmh_harvester/alembic/: 007a7cd707e1_oarepo_oaipmh_harvester_branch.py  5f7f68fc9fe4_create_run_and_record_tables.py  b2a45c3a744e_initial_revision.py  cecc281d2938_create_oarepo_oaipmh_harvester_branch.py  fe537978f289_initial_revision.py
oarepo_oaipmh_harvester/nr_theses_metadata/: __init__.py  config.py  ext.py  proxies.py  views.py
oarepo_oaipmh_harvester/nusl_oai/: __init__.py  clear_redis.py  reindex_temporary.py  transformer.py  utils.py
oarepo_oaipmh_harvester/oai_batch/: config.py  ext.py  proxies.py  views.py
oarepo_oaipmh_harvester/oai_harvester/: config.py  ext.py  proxies.py  views.py
oarepo_oaipmh_harvester/oai_record/: api.py  config.py  dumpers.py  ext.py  facets.py  models.py  permissions.py  proxies.py  readme.md  resource.py  results.py  schema.py  service.py  tasks.py  views.py
oarepo_oaipmh_harvester/oai_run/: api.py  config.py  dumpers.py  ext.py  facets.py  models.py  permissions.py  proxies.py  readme.md  resource.py  results.py  schema.py  service.py  tasks.py  views.py
oarepo_oaipmh_harvester/oaipmh_batch/: config.py  ext.py
oarepo_oaipmh_harvester/oaipmh_config/: config.py  ext.py  proxies.py  views.py
oarepo_oaipmh_harvester/oaipmh_record/: config.py  ext.py  proxies.py
oarepo_oaipmh_harvester/oaipmh_run/: config.py  ext.py  proxies.py  views.py
oarepo_oaipmh_harvester/readers/: oai_dir.py  sickle.py
oarepo_oaipmh_harvester/records/: relations.py
oarepo_oaipmh_harvester/services/: generators.py  links.py
oarepo_oaipmh_harvester/transformers/: batch.py  marcxml.py  original_data.py  record_lookup.py  rule.py
scripts/: migrate.py
tests/: conftest.py  datacite_4.5.yaml  datastreams.py  harvest_data.json  harvest_data2.json  helpers.py  model.py  parser.py  run-celery.sh  run_grab.py  test-model.yaml  test_CRUD.py  test_cli.py  test_decorators.py  test_exceptions.py  test_ext.py  test_harvest.py  test_jmespath.py  test_migration.py  test_model.py  test_models.py  test_oai_base.py  test_oai_record.py  test_oai_run.py  test_register.py  test_sickle_loader.py  test_synchronization.py  test_transformer.py  test_uk.py  test_utils.py  test_version.py  test_views.py  uk.py  uk_samples.py
(+358 files in other folders)
