[tool.poetry]
name = "oarepo-oai-pmh-harvester"
version = "3.1.0"
description = "OAIPMH harvester library for Invenio. Development only, not for production."
authors = ["Mirek Simek <miroslav.simek@gmail.com>"]
readme = "README.md"
packages = [
    { include = "oarepo_oaipmh_harvester" }
]

[tool.poetry.dependencies]
python = "^3.9"
invenio-records-resources = ">=0.19.0"
Sickle = "^0.7.0"
tqdm = "^4.63.0"
dojson = "^1.4.0"
invenio = "^3.4.1"
invenio-search = "^1.4.2"
elasticsearch = "7.17.3"
elasticsearch-dsl = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.'invenio_db.alembic']
oarepo_oaipmh_harvester = "oarepo_oaipmh_harvester:alembic"
oaipmh_config = "oarepo_oaipmh_harvester.oaipmh_config:alembic"

[tool.poetry.plugins.'invenio_db.models']
oarepo_oaipmh_harvester = "oarepo_oaipmh_harvester.models"
oaipmh_config = "oarepo_oaipmh_harvester.oaipmh_config.records.models"

[tool.poetry.plugins.'invenio_base.api_apps']
oarepo_oaipmh_harvester = "oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt"
oarepo_oaipmh_harvester_batch="oarepo_oaipmh_harvester.oaipmh_batch.ext:OaipmhBatchExt"
oarepo_oaipmh_harvester_config="oarepo_oaipmh_harvester.oaipmh_config.ext:OaipmhConfigExt"
oarepo_oaipmh_harvester_record="oarepo_oaipmh_harvester.oaipmh_record.ext:OaipmhRecordExt"
oarepo_oaipmh_harvester_run="oarepo_oaipmh_harvester.oaipmh_run.ext:OaipmhRunExt"

[tool.poetry.plugins.'invenio_base.apps']
oarepo_oaipmh_harvester = "oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt"
oarepo_oaipmh_harvester_batch="oarepo_oaipmh_harvester.oaipmh_batch.ext:OaipmhBatchExt"
oarepo_oaipmh_harvester_config="oarepo_oaipmh_harvester.oaipmh_config.ext:OaipmhConfigExt"
oarepo_oaipmh_harvester_record="oarepo_oaipmh_harvester.oaipmh_record.ext:OaipmhRecordExt"
oarepo_oaipmh_harvester_run="oarepo_oaipmh_harvester.oaipmh_run.ext:OaipmhRunExt"

[tool.poetry.plugins.'oarepo_oaipmh_harvester.parsers']
marcxml = "oarepo_oaipmh_harvester.parsers:MarcxmlParser"

[tool.poetry.plugins.'invenio_celery.tasks']
oarepo_oaipmh_harvester = "oarepo_oaipmh_harvester.harvester"

[tool.poetry.plugins.'invenio_jsonschemas.schemas']
oaipmh_batch = 'oarepo_oaipmh_harvester.oaipmh_batch.records.jsonschemas'
oaipmh_config = 'oarepo_oaipmh_harvester.oaipmh_config.records.jsonschemas'
oaipmh_record = 'oarepo_oaipmh_harvester.oaipmh_record.records.jsonschemas'
oaipmh_run = 'oarepo_oaipmh_harvester.oaipmh_run.records.jsonschemas'

[tool.poetry.plugins.'invenio_search.mappings']
oaipmh_batch = 'oarepo_oaipmh_harvester.oaipmh_batch.records.mappings'
oaipmh_config = 'oarepo_oaipmh_harvester.oaipmh_config.records.mappings'
oaipmh_record = 'oarepo_oaipmh_harvester.oaipmh_record.records.mappings'
oaipmh_run = 'oarepo_oaipmh_harvester.oaipmh_run.records.mappings'