[metadata]
name = oarepo-oai-pmh-harvester
version = 4.0.24
description = OAIPMH harvester
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>", "Miroslav Simek <miroslav.simek@cesnet.cz>"]
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    tqdm>=4.64.1
    oarepo-runtime>=1.4.2
    sickle
    pyyaml
    oarepo>=11,<12

packages = find:

[options.extras_require]
tests =
    pytest-invenio[opensearch2]
    invenio-app
    oarepo>=11,<12
    black
    isort
    autoflake
    oarepo-ui


[options.entry_points]
invenio_db.alembic =
    oarepo_oaipmh_harvester = oarepo_oaipmh_harvester:alembic


invenio_base.api_apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt
    oarepo_oaipmh_harvester.oai_run = oarepo_oaipmh_harvester.oai_run.ext:Oai_runExt
    oarepo_oaipmh_harvester.oai_batch = oarepo_oaipmh_harvester.oai_batch.ext:Oai_batchExt
    oarepo_oaipmh_harvester.oai_record = oarepo_oaipmh_harvester.oai_record.ext:Oai_recordExt
invenio_base.apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt
    oarepo_oaipmh_harvester.oai_run = oarepo_oaipmh_harvester.oai_run.ext:Oai_runExt
    oarepo_oaipmh_harvester.oai_batch = oarepo_oaipmh_harvester.oai_batch.ext:Oai_batchExt
    oarepo_oaipmh_harvester.oai_record = oarepo_oaipmh_harvester.oai_record.ext:Oai_recordExt

    oarepo_oaipmh_harvester.ui.oai_harvester = oarepo_oaipmh_harvester.ui.oai_harvester.ext:OaiHarvesterExt
    oarepo_oaipmh_harvester.ui.oai_batch = oarepo_oaipmh_harvester.ui.oai_batch.ext:OaiBatchExt
    oarepo_oaipmh_harvester.ui.oai_run = oarepo_oaipmh_harvester.ui.oai_run.ext:OaiRunExt
    oarepo_oaipmh_harvester.ui.oai_record = oarepo_oaipmh_harvester.ui.oai_record.ext:OaiRecordExt

invenio_base.blueprints =
    oai_harvester_ui = oarepo_oaipmh_harvester.ui.oai_harvester.views:create_blueprint
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.app:create_app_blueprint
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.views.records.app:create_app_blueprint
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.views.records.app:create_app_blueprint
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.views.records.app:create_app_blueprint
invenio_i18n.translations =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ui
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record

invenio_db.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.models
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.models
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.models
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.models
invenio_base.api_blueprints =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.api:create_api_blueprint
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.views.records.api:create_api_blueprint
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.views.records.api:create_api_blueprint
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.views.records.api:create_api_blueprint
invenio_search.mappings =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.mappings
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.mappings
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.mappings
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.mappings
invenio_jsonschemas.schemas =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.jsonschemas
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.jsonschemas
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.jsonschemas
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.jsonschemas
oarepo.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:records.json
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.models:records.json
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.models:records.json
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.models:records.json
oarepo.ui =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:ui.json
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.models:ui.json
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.models:ui.json
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.models:ui.json
[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2, *.html, *.jinja
oarepo_oaipmh_harvester.ui.oai_batch = templates/semantic-ui/oai_batch_ui/*.html, templates/semantic-ui/oai_batch_ui/*.jinja, theme/webpack.py, ./theme/assets/semantic-ui/less/oai_batch_ui/*, ./theme/assets/semantic-ui/less/oai_batch_ui/theme/elements/*, ./theme/assets/semantic-ui/less/oai_batch_ui/definitions/*, ./theme/assets/semantic-ui/js/oai_batch_ui/*, ./theme/assets/semantic-ui/js/oai_batch_ui/search/*, ./theme/assets/semantic-ui/js/oai_batch_ui/search/components/*
oarepo_oaipmh_harvester.ui.oai_harvester = templates/semantic-ui/oai_harvester_ui/*.html, templates/semantic-ui/oai_harvester_ui/*.jinja, theme/webpack.py, ./theme/assets/semantic-ui/less/oai_harvester_ui/*, ./theme/assets/semantic-ui/less/oai_harvester_ui/theme/elements/*, ./theme/assets/semantic-ui/less/oai_harvester_ui/definitions/*, ./theme/assets/semantic-ui/js/oai_harvester_ui/*, ./theme/assets/semantic-ui/js/oai_harvester_ui/search/*, ./theme/assets/semantic-ui/js/oai_harvester_ui/search/components/*
oarepo_oaipmh_harvester.ui.oai_run = templates/semantic-ui/oai_run_ui/*.html, templates/semantic-ui/oai_run_ui/*.jinja, theme/webpack.py, ./theme/assets/semantic-ui/less/oai_run_ui/*, ./theme/assets/semantic-ui/less/oai_run_ui/theme/elements/*, ./theme/assets/semantic-ui/less/oai_run_ui/definitions/*, ./theme/assets/semantic-ui/js/oai_run_ui/*, ./theme/assets/semantic-ui/js/oai_run_ui/search/*, ./theme/assets/semantic-ui/js/oai_run_ui/search/components/*
oarepo_oaipmh_harvester.ui.oai_record = templates/semantic-ui/oai_record_ui/*.html, templates/semantic-ui/oai_record_ui/*.jinja, theme/webpack.py, ./theme/assets/semantic-ui/less/oai_record_ui/*, ./theme/assets/semantic-ui/less/oai_record_ui/theme/elements/*, ./theme/assets/semantic-ui/less/oai_record_ui/definitions/*, ./theme/assets/semantic-ui/js/oai_record_ui/*, ./theme/assets/semantic-ui/js/oai_record_ui/search/*, ./theme/assets/semantic-ui/js/oai_record_ui/search/components/*

oarepo_oaipmh_harvester.oai_harvester = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*
oarepo_oaipmh_harvester.oai_run = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*
oarepo_oaipmh_harvester.oai_record = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*
oarepo_oaipmh_harvester.oai_batch = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*
oarepo_oaipmh_harvester.ui = translations/messages.pot, translations/cs/LC_MESSAGES/*, translations/en/LC_MESSAGES/*
