[metadata]
name = oarepo-oai-pmh-harvester
version = 4.1.1
description = OAIPMH harvester
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>", "Miroslav Simek <miroslav.simek@cesnet.cz>"]
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.10
install_requires =
    tqdm>=4.64.1
    oarepo-runtime>=1.4.44
    oarepo-ui>=5.0.89
    sickle
    pyyaml
    oarepo-runtime>=1.0.0

packages = find:
include_package_data = True

[options.extras_require]
tests =
    pytest-invenio[opensearch2]
    black
    isort
    autoflake

dev =
    oarepo-tools

[oarepo.i18n]
# List of language codes for which translations should be managed
languages =
    cs
    en

# List of paths to scan for babel messages - python files and jinja templates are scanned
babel_source_paths =
    oarepo_oaipmh_harvester/oai_harvester
    oarepo_oaipmh_harvester/oai_run
    oarepo_oaipmh_harvester/oai_record
    oarepo_oaipmh_harvester/oai_batch
    oarepo_oaipmh_harvester/ui

# extra message catalogues - if you use oarepo-model-builder to generate models, add the generated
# translations directories here
babel_input_translations =
    oarepo_oaipmh_harvester/oai_harvester/translations
    oarepo_oaipmh_harvester/oai_run/translations
    oarepo_oaipmh_harvester/oai_record/translations
    oarepo_oaipmh_harvester/oai_batch/translations

# List of paths to scan for i18next messages - javascript and jsx files are scanned
i18next_source_paths =
    oarepo_oaipmh_harvester/ui/oai_harvester/theme/assets/semantic-ui/js
    oarepo_oaipmh_harvester/ui/oai_run/theme/assets/semantic-ui/js
    oarepo_oaipmh_harvester/ui/oai_batch/theme/assets/semantic-ui/js
    oarepo_oaipmh_harvester/ui/oai_record/theme/assets/semantic-ui/js

# this is the location where python translations are generated.
babel_output_translations =
    oarepo_oaipmh_harvester/translations

# this is the location where javascript translations are generated. Add this directory to webpack
# aliases
i18next_output_translations =
    oarepo_oaipmh_harvester/ui/theme/assets/semantic-ui/translations/oarepo_oaipmh_harvester

[options.entry_points]
invenio_db.alembic =
    oarepo_oaipmh_harvester = oarepo_oaipmh_harvester:alembic

invenio_assets.webpack =
    oarepo_oai_pmh_ui_theme = oarepo_oaipmh_harvester.ui.theme.webpack:theme
    oarepo_oai_pmh_harvester_ui_theme = oarepo_oaipmh_harvester.ui.oai_harvester.theme.webpack:theme
    oarepo_oai_pmh_run_ui_theme = oarepo_oaipmh_harvester.ui.oai_run.theme.webpack:theme
    oarepo_oai_pmh_batch_ui_theme = oarepo_oaipmh_harvester.ui.oai_batch.theme.webpack:theme
    oarepo_oai_pmh_record_ui_theme = oarepo_oaipmh_harvester.ui.oai_record.theme.webpack:theme

invenio_base.api_apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt
    oarepo_oaipmh_harvester.oai_run = oarepo_oaipmh_harvester.oai_run.ext:Oai_runExt
    oarepo_oaipmh_harvester.oai_batch = oarepo_oaipmh_harvester.oai_batch.ext:Oai_batchExt
    oarepo_oaipmh_harvester.oai_record = oarepo_oaipmh_harvester.oai_record.ext:Oai_recordExt
invenio_base.apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt
    oarepo_oaipmh_harvester.oai_run = oarepo_oaipmh_harvester.oai_run.ext:Oai_runExt
    oarepo_oaipmh_harvester.oai_batch = oarepo_oaipmh_harvester.oai_batch.ext:Oai_batchExt
    oarepo_oaipmh_harvester.oai_record = oarepo_oaipmh_harvester.oai_record.ext:Oai_recordExt

    oarepo_oaipmh_harvester.ui.oai_harvester = oarepo_oaipmh_harvester.ui.oai_harvester.ext:OaiHarvesterExt
    oarepo_oaipmh_harvester.ui.oai_batch = oarepo_oaipmh_harvester.ui.oai_batch.ext:OaiBatchExt
    oarepo_oaipmh_harvester.ui.oai_run = oarepo_oaipmh_harvester.ui.oai_run.ext:OaiRunExt
    oarepo_oaipmh_harvester.ui.oai_record = oarepo_oaipmh_harvester.ui.oai_record.ext:OaiRecordExt

invenio_administration.views=
    oai_harvester_list = oarepo_oaipmh_harvester.administration.views.harvester:OaiPmhListView
    oaipmh_create = oarepo_oaipmh_harvester.administration.views.harvester:OaiPmhCreateView
    oaipmh_harvester_edit = oarepo_oaipmh_harvester.administration.views.harvester:OaiPmhEditView
    oaipmh_harvester_details = oarepo_oaipmh_harvester.administration.views.harvester:OaiPmhDetailView

    oaipmh_batch_list = oarepo_oaipmh_harvester.administration.views.batch:BatchListView
    oaipmh_batch_details = oarepo_oaipmh_harvester.administration.views.batch:BatchDetailView

    oaipmh_record_list = oarepo_oaipmh_harvester.administration.views.record:RecordListView
    oaipmh_record_details = oarepo_oaipmh_harvester.administration.views.record:RecordDetailView

    oaipmh_run_list = oarepo_oaipmh_harvester.administration.views.run:RunListView
    oaipmh_run_details = oarepo_oaipmh_harvester.administration.views.run:RunDetailView

invenio_base.blueprints =
    oai_harvester_ui = oarepo_oaipmh_harvester.ui.oai_harvester.views:create_blueprint
    oai_batch_ui = oarepo_oaipmh_harvester.ui.oai_batch.views:create_blueprint
    oai_record_ui = oarepo_oaipmh_harvester.ui.oai_record.views:create_blueprint
    oai_run_ui = oarepo_oaipmh_harvester.ui.oai_run.views:create_blueprint
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.app:create_app_blueprint
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.views.records.app:create_app_blueprint
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.views.records.app:create_app_blueprint
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.views.records.app:create_app_blueprint
invenio_i18n.translations =
    oarepo_oaipmh = oarepo_oaipmh_harvester
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record

invenio_db.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.models
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.models
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.models
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.models
invenio_base.api_blueprints =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.api:create_api_blueprint
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.views.records.api:create_api_blueprint
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.views.records.api:create_api_blueprint
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.views.records.api:create_api_blueprint
    harvest = oarepo_oaipmh_harvester.views.api:create_harvest
invenio_celery.tasks =
    harvest = oarepo_oaipmh_harvester.tasks
invenio_search.mappings =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.mappings
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.mappings
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.mappings
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.mappings
invenio_jsonschemas.schemas =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.jsonschemas
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.records.jsonschemas
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.records.jsonschemas
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.records.jsonschemas
oarepo.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:records.json
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.models:records.json
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.models:records.json
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.models:records.json
oarepo.ui =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:ui.json
    oarepo-oaipmh-run = oarepo_oaipmh_harvester.oai_run.models:ui.json
    oarepo-oaipmh-batch = oarepo_oaipmh_harvester.oai_batch.models:ui.json
    oarepo-oaipmh-record = oarepo_oaipmh_harvester.oai_record.models:ui.json


[options.packages.find]
exclude = tests


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2
