[metadata]
name = oarepo-oai-pmh-harvester
version = 5.0.9
description = OAIPMH harvester
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>", "Miroslav Simek <miroslav.simek@cesnet.cz>"]
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.12
install_requires =
    tqdm>=4.64.1
    oarepo-runtime>=1.4.44
    oarepo-ui>=5.0.89
    sickle
    pyyaml
    oarepo-runtime>=1.0.0
    oarepo-global-search>=1.0.23
    deepmerge>=1.1.0
    oarepo-vocabularies>=2.0.0
    oarepo-requests>=1.0.2
    oarepo-communities>=5.0.0
    oarepo-global-search>=1.0.20
    oarepo-workflows>=1.0.0

packages = find:
include_package_data = True

[options.extras_require]
tests =
    pytest-invenio[opensearch2]
    black
    isort
    autoflake
    pytest-invenio>=1.4.11

dev =
    oarepo-tools

[oarepo.i18n]
# List of language codes for which translations should be managed
languages =
    cs
    en

# List of paths to scan for babel messages - python files and jinja templates are scanned
babel_source_paths =
    oarepo_oaipmh_harvester/oai_harvester
    oarepo_oaipmh_harvester/ui

# extra message catalogues - if you use oarepo-model-builder to generate models, add the generated
# translations directories here
babel_input_translations =
    oarepo_oaipmh_harvester/oai_harvester/translations

# List of paths to scan for i18next messages - javascript and jsx files are scanned
i18next_source_paths =
    oarepo_oaipmh_harvester/ui/oai_harvester/theme/assets/semantic-ui/js

# this is the location where python translations are generated.
babel_output_translations =
    oarepo_oaipmh_harvester/translations

# this is the location where javascript translations are generated. Add this directory to webpack
# aliases
i18next_output_translations =
    oarepo_oaipmh_harvester/ui/theme/assets/semantic-ui/translations/oarepo_oaipmh_harvester

[options.entry_points]
invenio_db.alembic =
    oarepo_oaipmh_harvester = oarepo_oaipmh_harvester:alembic

invenio_base.api_apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt
invenio_base.apps =
    oarepo_oaipmh = oarepo_oaipmh_harvester.ext:OARepoOAIHarvesterExt
    oarepo_oaipmh_harvester.oai_harvester = oarepo_oaipmh_harvester.oai_harvester.ext:Oai_harvesterExt

invenio_administration.views =
    oarepo_oai_harvester_list = oarepo_oaipmh_harvester.administration.harvester.views:OaiPmhListView
    oarepo_oaipmh_create = oarepo_oaipmh_harvester.administration.harvester.views:OaiPmhCreateView
    oarepo_oaipmh_harvester_edit = oarepo_oaipmh_harvester.administration.harvester.views:OaiPmhEditView
    oarepo_oaipmh_harvester_details = oarepo_oaipmh_harvester.administration.harvester.views:OaiPmhDetailView

    oarepo_oaipmh_run_list = oarepo_oaipmh_harvester.administration.run.views:RunListView
    oarepo_oaipmh_run_details = oarepo_oaipmh_harvester.administration.run.views:RunDetailView

    oarepo_oaipmh_record_list = oarepo_oaipmh_harvester.administration.record.views:RecordListView
    oarepo_oaipmh_record_details = oarepo_oaipmh_harvester.administration.record.views:RecordDetailView

invenio_base.blueprints =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.app:create_app_blueprint

invenio_i18n.translations =
    oarepo_oaipmh = oarepo_oaipmh_harvester
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester

invenio_db.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.models
    oarepo-oaipmh = oarepo_oaipmh_harvester.models

invenio_base.api_blueprints =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.views.records.api:create_api_blueprint
    oarepo-oaipmh-harvester_run = oarepo_oaipmh_harvester.oai_run.views:create_api_blueprint
    oarepo-oaipmh-harvester_record = oarepo_oaipmh_harvester.oai_record.views:create_api_blueprint


invenio_celery.tasks =
    oarepo_harvest = oarepo_oaipmh_harvester.tasks
invenio_search.mappings =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.mappings
    oai-harvest-run = oarepo_oaipmh_harvester.oai_run.mappings
    oai-harvest-record = oarepo_oaipmh_harvester.oai_record.mappings
invenio_jsonschemas.schemas =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.records.jsonschemas
oarepo.models =
    oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:records.json
invenio_base.api_finalize_app =
    oarepo_oaipmh_harvester = oarepo_oaipmh_harvester.ext:api_finalize_app
invenio_base.finalize_app =
    oarepo_oaipmh_harvester = oarepo_oaipmh_harvester.ext:finalize_app
invenio.oarepo_oaipmh_harvester.oai_harvester.response_handlers =
    administration = oarepo_oaipmh_harvester.administration.harvester.api:response_handlers

invenio_access.actions =
    harvest_action = oarepo_oaipmh_harvester.permissions:harvest_action


oarepo.ui = oarepo-oaipmh-harvester = oarepo_oaipmh_harvester.oai_harvester.models:ui.json
[options.packages.find]
exclude = tests


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[tool:pytest]
testpaths = tests